--- a/server/drivers/pom.xml
+++ b/server/drivers/pom.xml
@@ -26,6 +26,9 @@
         <module>sqlite</module>
         <module>sqlserver</module>
         <module>trino</module>
+        <module>hive</module>
+        <module>hana</module>
+        <module>starrocks</module>
     </modules>
 
     <build>
