--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -1,12 +1,12 @@
 name: Check
 
 on:
-  push:
-    branches:
-      - devel
-  pull_request:
-    branches:
-      - devel
+  # push:
+  #   branches:
+  #     - devel
+  # pull_request:
+  #   branches:
+  #     - devel
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
