--- a/server/bundles/io.cloudbeaver.resources.drivers.base/plugin.xml
+++ b/server/bundles/io.cloudbeaver.resources.drivers.base/plugin.xml
@@ -18,6 +18,9 @@
         <resource name="drivers/mssql/new"/>
         <resource name="drivers/trino"/>
         <resource name="drivers/kyuubi"/>
+        <resource name="drivers/hive"/>
+        <resource name="drivers/hana"/>
+        <resource name="drivers/starrocks"/>
     </extension>
 
     <!-- Bundles  -->
@@ -38,6 +41,9 @@
         <bundle id="drivers.mssql.new" label="SQL Server drivers"/>
         <bundle id="drivers.trino" label="Trino drivers"/>
         <bundle id="drivers.kyuubi" label="Apache Kyuubi drivers"/>
+        <bundle id="drivers.hive" label="Apache Hive drivers"/>
+        <bundle id="drivers.hana" label="SAP HANA drivers"/>
+        <bundle id="drivers.starrocks" label="StarRocks drivers"/>
     </extension>
 
     <!-- Enabled drivers -->
@@ -58,6 +64,9 @@
         <driver id="generic:trino_jdbc"/>
         <driver id="generic:duckdb_jdbc"/>
         <driver id="generic:kyuubi_hive"/>
+        <driver id="hive:apache_hive2"/>
+        <driver id="hana:sap_hana"/>
+        <driver id="mysql:starRocks"/>
     </extension>
 
 
