add hive driver

--- a/server/drivers/pom.xml
+++ b/server/drivers/pom.xml
@@ -27,7 +27,7 @@
         <module>sqlserver</module>
         <module>trino</module>
         <module>hive</module>
-        <!-- <module>hana</module> -->
+        <module>hana</module>
         <module>starrocks</module>
     </modules>
 
