drop hive driver[2]

--- a/server/drivers/pom.xml
+++ b/server/drivers/pom.xml
@@ -31,7 +31,7 @@
         <module>sqlite</module>
         <module>sqlserver</module>
         <module>trino</module>
-        <module>hive</module>
+        <!-- <module>hive</module> -->
         <module>hana</module>
         <module>starrocks</module>
     </modules>
